syntax = "proto3";

package embedding;
option java_multiple_files = true;
option java_package = "embedding.proto";
option java_outer_classname = "EmbeddingProto";

service EmbeddingService {
    rpc GetEmbedding(EmbeddingRequest) returns (EmbeddingResponse);
}

message EmbeddingRequest {
    string text = 1;
}

message EmbeddingResponse {
    enum Status {
        SUCCESS=0;
        FAILED=1;
    }
    Status status = 1;
    oneof payload {
        Embedding embedding=2;
        string error=3;
    }
}

message Embedding {
    repeated float values=1;
}